# stihi-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
src/stihi/: __init__.py  __main__.py  crawler.py  models.py  parser.py  storage.py  web.py
src/stihi/templates/: base.html  browse.html  index.html  poem.html  preview.html  progress.html  section.html
tests/: test_crawler.py  test_models.py  test_parser.py  test_storage.py  test_web.py
